--- a/FoodBar/FoodBar.html
+++ b/FoodBar/FoodBar.html
@@ -331,7 +331,7 @@
         }
       } else {
 
-        msgShow.innerText = `今天吃${dishArray[eatWhatCurrentIndex - 1].dish} 要花${dishArray[eatWhatCurrentIndex].price}元`
+        msgShow.innerText = `今天吃${dishArray[eatWhatCurrentIndex - 1].dish} 要花${dishArray[eatWhatCurrentIndex - 1].price}元`
       }
     }
   </script>
