--- a/ToDoList/index_2.html
+++ b/ToDoList/index_2.html
@@ -1,18 +1,152 @@
 <!doctype html>
 <html lang="zh-Hant">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
+
 <body>
+  <div class="container d-flex">
+    <div class="main col-12 m-3">
+      <div class="input-group mb-3">
+        <input type="text" class="addText form-control" placeholder="Todo" aria-label="Todo"
+          aria-describedby="button-addon2">
+        <button class="addEvent btn btn-primary btn-outline-primary text-white " type="button"
+          id="button-addon2">新增</button>
+      </div>
+      <div class="row todo">
+        <!-- <div class="input-group mb-3">
+        <div class="input-group-text">
+          <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="todoText form-control" aria-label="Text input with checkbox" disabled>
+        <button class="editEvent btn btn-warning btn-outline-warning text-black mx-1 rounded " type="button" id="button-addon2">編輯</button>
+        <button class="deleteEvent btn btn-danger btn-outline-danger text-white rounded " type="button" id="button-addon2">刪除</button> -->
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
 
   <script>
-    
+    //宣告
+    let todoKey = 'key';
+
+    //DOM
+    const textAdd = document.querySelector(".addText");
+    const buttonAdd = document.querySelector(".addEvent");
+    const todoList = document.querySelector(".todo")
+
+
+    //window.onload
+    window.onload = function () {
+      createList()
+      buttonAdd.onclick = function () {
+        if (textAdd.value == "") {
+          alert("請輸入待辦事項")
+        } else {
+          addToList()
+
+        }
+      }
+    }
+
+    function createList() {
+      textAdd.value = ""
+      todoList.innerHTML = ""
+      let todoStorage = JSON.parse(localStorage.getItem(todoKey))
+      if (todoStorage != null) {
+        todoStorage.forEach((element, index) => {
+          todoList.innerHTML += `<div class="input-group mb-3">
+        <div class="input-group-text">
+          <input class="check${index} form-check-input mt-0" type="checkbox" checked:" ${element.Done ? "checked" : ""}  value="" aria-label="Checkbox for following text input" onclick="DoneCheck(${index})">
+        </div>
+        <input type="text" class="text${index}  form-control" value ="${element.Content}" aria-label="Text input with checkbox" disabled  >
+        <button class="edit${index}  btn btn-warning btn-outline-warning text-black mx-1 rounded " type="button" id="button-addon2" onclick="edit(${index})">編輯</button>
+        <button class="delete${index} btn btn-danger btn-outline-danger text-white rounded " type="button" id="button-addon2" onclick="deleteEvent(${index})">刪除</button>`
+        });
+      }
+    }
+
+    function addToList() {
+      let todoStorage = []
+      let todoCheckbox = false
+      let todoRow = {
+        Content: textAdd.value,
+        Done: todoCheckbox
+      }
+      console.log(todoRow)
+      if (localStorage.getItem(todoKey) != null) {
+        todoStorage = JSON.parse(localStorage.getItem(todoKey))
+        todoStorage.push(todoRow)
+      } else {
+        todoStorage.push(todoRow)
+      }
+      localStorage.setItem(todoKey, JSON.stringify(todoStorage))
+      createList()
+    }
+    function edit(index) {
+      let btnEdit = document.querySelector(`.edit${index}`)
+      const textEdit = document.querySelector(`.text${index}`)
+      textEdit.disabled = false
+      btnEdit.innerText = "保存"
+      btnEdit.classList.add(`save${index}`, "btn-success", "btn-outline-success", "text-white")
+      btnEdit.setAttribute("onclick", `save(${index})`)
+      btnEdit.classList.remove(`edit${index}`, "btn-warning", "btn-outline-warning", "text-black")
+    }
+    function save(index) {
+      let btnSave = document.querySelector(`.save${index}`)
+      const textEdit = document.querySelector(`.text${index}`)
+      let todoStorage = JSON.parse(localStorage.getItem(todoKey))
+      let todoCheckBox = todoStorage[index].Done
+      textEdit.disabled = true
+      btnSave.innerText = "編輯"
+      btnSave.classList.add(`edit${index}`, "btn-warning", "btn-outline-warning", "text-black")
+      btnSave.setAttribute("onclick", `edit(${index})`)
+      btnSave.classList.remove(`save${index}`, "btn-success", "btn-outline-success", "text-white")
+      todoStorage[index] = {
+        Content: textEdit.value,
+        Done: todoCheckBox
+      }
+      localStorage.setItem(todoKey, JSON.stringify(todoStorage))
+      createList()
+    }
+    function deleteEvent(index) {
+      const btnDel = document.querySelector(`.delete${index}`)
+      let todoStorage = JSON.parse(localStorage.getItem(todoKey))
+      todoStorage.splice(index, 1)
+      localStorage.setItem(todoKey, JSON.stringify(todoStorage))
+      createList()
+    }
+    function DoneCheck(index) {
+      const textEdit = document.querySelector(`.text${index}`)
+      let ifDone;
+      let todoStorage = JSON.parse(localStorage.getItem(todoKey))
+      if (todoStorage[index].Done == true) {
+        ifDone = false;
+      } else {
+        ifDone = true;
+      }
+      todoStorage[index] = {
+          Content: textEdit.value,
+          Done:ifDone
+        }
+      localStorage.setItem(todoKey, JSON.stringify(todoStorage))
+      createList()
+    }
+
+
+
   </script>
-
-
 </body>
+
 </html>
